gamehost/games-stack-gamehost-cft.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  gamehost.bradfordly.com cloudformation stack

Parameters:
  EnvironmentName:
    Type: String
    Description: A short name for the environment (e.g. dev, prod, feature123)
    AllowedPattern: "^(dev|prod|feature[0-9]{3})$"
    ConstraintDescription: |
      Must be one of the following:
      - 'feature' followed by 3 digits that corresond to an issue number on github (e.g. feature001, feature010, feature101)
      - 'dev' for the development branch
      - 'prod' for the current release branch
  
  Component:
    Type: String
    Description: Component name for tagging resources
  
  Owner:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Description: Owner contact for tagging resources
    Default: '/aws/service/canonical/ubuntu/server/24.04/stable/current/amd64/hvm/ebs-gp3/ami-id'
  
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Description: The latest available AMI ID for the host os
    Default: '/aws/service/canonical/ubuntu/server/jammy/stable/current/amd64/hvm/ebs-gp2/ami-id'

  Subnet:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Description: Subnet ID
    Default: '/gamehost/subnet'
  
  S3Bucket:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Description: S3 staging bucket for scripts, backups, and other assets
    Default: '/gamehost/s3bucket'

  HostedZoneId:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Description: Route53 Hosted Zone ID
    Default: 'coreHostedZone'
  
  # DBPassword:
  #   Type: String
  #   Description: Database password
  #   Default: '{{resolve:secretsmanager:/gamehost/dbPassword:password}}'
  #   NoEcho: true

  # AdminPassword:
  #   Type: String
  #   Description: Admin password
  #   Default: '{{resolve:secretsmanager:/gamehost/adminPassword:password}}'
  #   NoEcho: true

Resources:
  #######################################
  # Access
  #######################################

  GamehostIAMRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${Component}-role-${EnvironmentName}"
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Tags:
        - Key: Component
          Value: !Ref Component
        - Key: Owner
          Value: !Ref Owner
  
  GamehostInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref GamehostIAMRole

  #######################################
  # Compute
  #######################################

  GamehostEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref GamehostInstanceProfile
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !GetAtt GamehostSecurityGroup.GroupId
      
      InstanceType: m5.large
      ImageId: !Ref LatestAmiId
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: '30'
            DeleteOnTermination: 'true'
            Encrypted: 'true'
      Tags:
        - Key: Name
          Value: !Sub "${Component}-ec2-${EnvironmentName}"
        - Key: Module
          Value: ${Component}
        - Key: Owner
          Value: ${Owner}
      # TODO: UserData: 
      #   Fn::Base64:
      #     !Sub |
      #       #!/bin/bash -xe
      #       aws s3 cp ${S3Bucket}/${Component}/scripts /opt/${Component}/scripts
      #       chmod +x /opt/${Component}/scripts/userdata.sh
      #       export FQDN_HOST="gamehost.bradfordly.com"
      #       export FQDN_PANEL="gamepanel.bradfordly.com"
      #       export MYSQL_DB="panel"
      #       export MYSQL_USER="dbuser"
      #       export MYSQL_PASSWORD="${DBPassword}"
      #       export timezone="America/New_York"
      #       export ASSUME_SSL="false"
      #       export CONFIGURE_LETSENCRYPT="true"
      #       export CONFIGURE_FIREWALL="true"
      #       export email="${Owner}"
      #       export user_email="${Owner}"
      #       export user_username="admin"
      #       export user_firstname="Admin"
      #       export user_lastname="User"
      #       export user_password="${AdminPassword}"
      #       bash . /opt/gamehost/scripts/gamehost-userdata.sh
  
  #######################################
  # Networking
  #######################################
  
  GamehostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupName: "${Component}-ec2-access"
        GroupDescription: "Allows specific traffic in/out for SSH and game servers"
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
            Description: HTTP
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
            Description: HTTPS
          - IpProtocol: udp
            FromPort: 27015
            ToPort: 27015
            CidrIp: 0.0.0.0/0
            Description: Steam
          - IpProtocol: tcp
            FromPort: 25565
            ToPort: 25565
            CidrIp: 0.0.0.0/0
            Description: Minecraft
          - IpProtocol: udp
            FromPort: 8211
            ToPort: 8211
            CidrIp: 0.0.0.0/0
            Description: Palworld
          - IpProtocol: tcp
            FromPort: 1985
            ToPort: 1985
            CidrIp: 0.0.0.0/0
            Description: Palworld2
        Tags:
          - Key: Module
            Value: ${Component}
          - Key: Owner
            Value: ${Owner}

  #######################################
  # Data
  #######################################
  
  GamehostS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref S3Bucket
      VersioningConfiguration:
        Status: Enabled
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
            BucketKeyEnabled: true
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerEnforced
      LifecycleConfiguration:
        Rules:
          - Id: DeleteOldVersions
            Status: Enabled
            NoncurrentVersionExpiration:
              NoncurrentDays: 90
          - Id: AbortIncompleteMultipartUploads
            Status: Enabled
            AbortIncompleteMultipartUpload:
              DaysAfterInitiation: 7

  GamehostS3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref GamehostS3Bucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: EnforceHTTPS
            Effect: Deny
            Principal: "*"
            Action: "s3:*"
            Resource:
              - !GetAtt GamehostS3Bucket.Arn
              - !Sub "${GamehostS3Bucket.Arn}/*"
            Condition:
              Bool:
                "aws:SecureTransport": "false"
          - Sid: AllowGamehostRole
            Effect: Allow
            Principal:
              AWS: !GetAtt GamehostIAMRole.Arn
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
              - "s3:ListBucket"
              - "s3:DeleteObject"
            Resource:
              - !GetAtt GamehostS3Bucket.Arn
              - !Sub "${GamehostS3Bucket.Arn}/*"

  #######################################
  # Route53
  #######################################
  
  GamehostDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: gamehost.bradfordly.com
      Type: CNAME
      TTL: 60
      ResourceRecords:
        - !GetAtt GamehostEC2Instance.PublicDnsName
  
  GamepanelDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: gamepanel.bradfordly.com
      Type: CNAME
      TTL: 60
      ResourceRecords:
        - !GetAtt GamehostEC2Instance.PublicDnsName
